# daisynotes

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  INTEGRATION.md  LICENSE  PLAN.md  README.md  RELEASE.md  VOICE.md
.claude/: launch.json
.github/workflows/: marketing.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: anchor.rs  decision.rs  lib.rs  prompts.rs  trigger.rs  types.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  handle.rs  keys.rs  lib.rs  types.rs  wire.rs
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs  muse_flow.rs  persistence.rs  settings.rs  updater.rs  workspace.rs
crates/clipboard/: Cargo.toml
crates/clipboard/src/: lib.rs
crates/commands/: Cargo.toml
crates/commands/src/: actions.rs  keymap.rs  lib.rs  menus.rs
crates/core/: Cargo.toml
crates/core/src/: anchor.rs  document.rs  fragment.rs  history.rs  images.rs  json.rs  lib.rs  nav.rs  paras.rs  spans.rs  style.rs
crates/core/tests/: document.rs  properties.rs
crates/editor/: Cargo.toml
crates/editor/src/: anim.rs  clipboard.rs  element.rs  layout.rs  lib.rs  notes.rs  overlays.rs  policy.rs  runs.rs
crates/entries/: Cargo.toml
crates/entries/src/: age.rs  lib.rs
crates/local/: Cargo.toml
crates/local/src/: engine.rs  grammar.rs  lib.rs  prompt.rs  reply.rs  worker.rs
crates/local/tests/: e2e.rs
crates/storage/: Cargo.toml
crates/storage/src/: agent.rs  blobs.rs  entries.rs  error.rs  kv.rs  lib.rs  paths.rs  schema.rs  store.rs
crates/theme/: Cargo.toml
crates/theme/src/: custom.rs  fonts.rs  layout.rs  lib.rs  motion.rs  oklch.rs  tokens.rs
crates/topbar/: Cargo.toml
crates/topbar/src/: lib.rs  popover.rs  steps.rs
crates/ui/: Cargo.toml
crates/ui/src/: assets.rs  button.rs  containers.rs  divider.rs  fonts.rs  icon.rs  lib.rs  switch.rs  text_field.rs
marketing/: index.html  open-source.html  package-lock.json  package.json  vite.config.js
marketing/logo-explorations/: contact-sheet.html
marketing/src/: main.js  style.css
scripts/: dmg-settings.py  make-bold-fonts.py  make-dmg-background.swift  make-icon.swift  package.sh  release.sh  style-dmg.py
