[package]
name = "muse"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "muse"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
muse-core.workspace = true
muse-editor.workspace = true
muse-agent.workspace = true
muse-commands.workspace = true
muse-entries.workspace = true
muse-topbar.workspace = true
muse-api.workspace = true
muse-local.workspace = true
muse-storage.workspace = true
muse-theme.workspace = true
muse-ui.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
jiff.workspace = true
ulid.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
