[package]
name = "daisynotes"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "daisynotes"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
daisynotes-core.workspace = true
daisynotes-editor.workspace = true
daisynotes-agent.workspace = true
daisynotes-commands.workspace = true
daisynotes-entries.workspace = true
daisynotes-topbar.workspace = true
daisynotes-api.workspace = true
daisynotes-local.workspace = true
daisynotes-storage.workspace = true
daisynotes-theme.workspace = true
daisynotes-ui.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
jiff.workspace = true
ulid.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
# Blocking HTTP for the on-demand update check (run on a background thread).
reqwest = { workspace = true, features = ["blocking"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# Objective-C bridge to the vendored Sparkle.framework (auto-update).
objc2 = "0.6"
