[package]
name = "muse-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
gpui.workspace = true
muse-core.workspace = true
muse-commands.workspace = true
muse-theme.workspace = true
muse-ui.workspace = true
unicode-segmentation.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
serde_json.workspace = true
tracing.workspace = true
