[package]
name = "daisynotes-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
gpui.workspace = true
daisynotes-core.workspace = true
daisynotes-commands.workspace = true
daisynotes-theme.workspace = true
daisynotes-ui.workspace = true
unicode-segmentation.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
serde_json.workspace = true
tracing.workspace = true
