[package]
name = "daisynotes-local"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
llama-cpp-2.workspace = true
daisynotes-api.workspace = true
reqwest = { workspace = true, features = ["stream"] }
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
