[package]
name = "muse-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
jiff.workspace = true
ulid.workspace = true
tracing.workspace = true
parking_lot.workspace = true
