[package]
name = "daisynotes-topbar"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
gpui.workspace = true
daisynotes-core.workspace = true
daisynotes-theme.workspace = true
daisynotes-ui.workspace = true
daisynotes-commands.workspace = true
